--- a/index.css
+++ b/index.css
@@ -6,11 +6,11 @@ body{
 }
 header{
     text-align: center;
-    margin: 40px 0px 0px;
+    margin: 45px 0px 0px;
 }
 
 header img{
-    width: 18%;
+    width: 9%;
     margin: 0px 0px 5px;
 }
 header p{
@@ -25,9 +25,10 @@ header p{
     justify-content: center;
     align-items: center;
     height: auto;
+
 }
 .languages__container{
-    width: 600px;
+    width: 60%;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -43,10 +44,9 @@ header p{
 }
 
 .languages__img{
-    width: 35%;
+    width: 23%;
 }
 .languages__left a, .languages__right a{
-    margin: 0;
     font-weight: bold;
     color: #36c;
 
@@ -57,70 +57,70 @@ header p{
 
 }
 .languages__left p, .languages__right p{
-    margin: 0;
+    margin-top: 5px;
     font-size: small;
-    
+    font-weight: lighter;
 }
 
 /*---Languages ITEMS ---*/
 
 .languages__item1{
-    top: 130px;
-    right: 60%;
+    top: 110px;
+    right: 55%;
     position: absolute;
 }
 .languages__item2{
-    top: 190px;
-    right: 65%;
+    top: 180px;
+    right: 59%;
     position: absolute;
 }
 
 .languages__item3{
     top: 250px;
-    right: 67%;
+    right: 60%;
     position: absolute;
 }
 
 .languages__item4{
-    top: 310px;
-    right: 65%;
+    top: 315px;
+    right: 60%;
     position: absolute;
 }
 
 .languages__item5{
-    top: 370px;
-    right: 60%;
+    top: 375px;
+    right: 56%;
     position: absolute;
 }
 
 
 
 .languages__item6{
-    top: 130px;
-    left: 60%;
+    top: 110px;
+    left: 55%;
     position: absolute;
 }
 .languages__item7{
-    top: 190px;
-    left: 65%;
+    top: 180px;
+    left: 59%;
     position: absolute;
 }
 
 .languages__item8{
     top: 250px;
-    left: 67%;
+    left: 60%;
     position: absolute;
 }
 
 .languages__item9{
-    top: 310px;
-    left: 65%;
+    top: 315px;
+    left: 60%;
     position: absolute;
 }
 
 .languages__item10{
-    top: 370px;
-    left: 60%;
+    top: 375px;
+    left: 56%;
     position: absolute;
 }
 
@@ -173,4 +173,20 @@ button{
 .chooselang__input img{
     margin: 7px 5px;
     width: 25px;
+}
+
+.select__input{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.select__input--item{
+    width: 460px;
+    border-bottom: gray 1px solid;
+    margin: 50px;
+}
+
+.language__list{
+
 }
